TouchGFX/output_CompileSimulator.log
Converting images
Compiling gui/src/switchbutton_screen/SwitchButtonView.cpp
gui/src/switchbutton_screen/SwitchButtonView.cpp: In member function 'virtual void SwitchButtonView::setupScreen()':
gui/src/switchbutton_screen/SwitchButtonView.cpp:23:30: error: cast from type 'const char*' to type 'uint8_t* {aka unsigned char*}' casts away qualifiers [-Werror=cast-qual]
  Unicode::fromUTF8((uint8_t*)"hello world_123",TextDisPlay_1Buffer,30);
                              ^~~~~~~~~~~~~~~~~
gui/src/switchbutton_screen/SwitchButtonView.cpp: In member function 'void SwitchButtonView::updatetext1String(std::__cxx11::string)':
gui/src/switchbutton_screen/SwitchButtonView.cpp:51:40: error: cast from type 'const char*' to type 'uint8_t* {aka unsigned char*}' casts away qualifiers [-Werror=cast-qual]
  Unicode::fromUTF8((uint8_t*)str.c_str(),TextDisPlay_1Buffer,30);
                                        ^
gui/src/switchbutton_screen/SwitchButtonView.cpp: In member function 'void SwitchButtonView::updatetext2String(std::__cxx11::string)':
gui/src/switchbutton_screen/SwitchButtonView.cpp:65:40: error: cast from type 'const char*' to type 'uint8_t* {aka unsigned char*}' casts away qualifiers [-Werror=cast-qual]
  Unicode::fromUTF8((uint8_t*)str.c_str(),TextDisPlay_2Buffer,30);
                                        ^
cc1plus.exe: all warnings being treated as errors
simulator/gcc/Makefile:220: recipe for target 'build/MINGW32_NT-6.2/gui/src/switchbutton_screen/SwitchButtonView.o' failed
make[2]: *** [build/MINGW32_NT-6.2/gui/src/switchbutton_screen/SwitchButtonView.o] Error 1
simulator/gcc/Makefile:182: recipe for target 'generate_assets' failed
make[1]: *** [generate_assets] Error 2
simulator/gcc/Makefile:40: recipe for target 'all' failed
make: *** [all] Error 2
